[package]
name = "lsun_res_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png", "bmp"] }
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
once_cell = "1.18.0"
polyfit-rs = "0.2.1"
thiserror = "1.0.44"

[dev-dependencies]
matfile = "0.4.0"
ndarray-npy = "0.8.1"
